# Comp_algebra_system

./: CMakeLists.txt  README.md  calculator.pro  main.cpp
lib/src/Exceptions/: UniversalStringException.h
lib/src/Parcer/: README.md
lib/src/Parcer/tokenize/: AhoCorasick.cpp  AhoCorasick.h  Tokenizer.cpp  Tokenizer.h  latex_lexemes.h  token_definitions.h
lib/src/Validator/: Validator.cpp  Validator.h
lib/src/algstructures/: Integer.cpp  Integer.h  Natural.cpp  Natural.h  Polynom.cpp  Polynom.h  Rational.cpp  Rational.h
lib/tests/: CMakeLists.txt
lib/tests/core/: tokenize_test.cpp
lib/tests/integer/: integer_test.cpp
lib/tests/natural/: natural_test.cpp
lib/tests/polynom/: polynom_test.cpp
lib/tests/rational/: rational_test.cpp
